Apply changes to README.md, docs/docs.go, docs/swagger.json, ...
