# models.go
@@ -24,7 +24,26 @@ type Partners struct {
 type QueryParams struct {
 	AddressLon   float64   `json:"address_lon" binding:"required"`
 	AddressLat   float64   `json:"address_lat" binding:"required"`
-	Services     []string  `json:"services" binding:"required"`
-	FloorSize    float64   `json:"floor_size" binding:"required"`
+	Services     []string  `json:"services" binding:"required,gt=0"`
+	FloorSize    float64   `json:"floor_size" binding:"required,gt=0"`
 	PhoneNumber  string    `json:"phone_number" binding:"required"`
+}
+
+type FlooringMatchesResponse struct {
+	Partners []Partner `json:"partners"`
+}
+
+type Partner struct {
+	ID               uint       `json:"id"`
+	AddressLon       float64    `json:"addressLon"`
+	AddressLat       float64    `json:"addressLat"`
+	OperatingRadius  float64    `json:"operatingRadius"`
+	Rating           float64    `json:"rating"`
+	Services         []Service  `json:"services"`
+	Distance         float64    `json:"distance,omitempty"`
+}
+
+type Service struct {
+	ID        uint   `json:"id"`
+	Name      string `json:"name"`
 }
